Fast fix scrollbar

--- a/client/src/styles/restaurant-item.css
+++ b/client/src/styles/restaurant-item.css
@@ -30,3 +30,7 @@ h2 {
   color: #fac564 !important;
   background-color: #373940 !important;
 }
+
+.restaurant-tab {
+  padding-bottom: 55px;
+}
